[package]
name = "rtlsdr_sys"
version = "1.1.2"
authors = ["Mick Koch <mick@kochm.co>"]
description = "Low-level bindings to librtlsdr"
license = "GPL-2.0+"
documentation = "https://kchmck.github.io/doc/rtlsdr_sys/"
repository = "https://github.com/kchmck/rtlsdr_sys.rs"
keywords = ["rtl-sdr", "librtlsdr", "ffi", "rtlsdr", "sys"]
build = "build.rs"

[dependencies]
libc = "0.2.8"

[build-dependencies]
pkg-config = "0.3.6"
